--- a/projeto de vida/index.html
+++ b/projeto de vida/index.html
@@ -13,14 +13,14 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Casar</button>
-                <button class="botao">Fazer outra faculdade</button>
-                <button class="botao">Fazer cursos de programação</button>
-                <button class="botao">Emagrecer</button>
+                <button class="botao ativo">Terminar o ensino médio</button>
+                <button class="botao">Passar menos tempo no celular</button>
+                <button class="botao">Aprender a dirigir</button>
+                <button class="botao">Mudar de cidade</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Legalizar minha união com meu companheiro</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Não faltar e me dedicar bastante.</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Agregar meu conhecimento</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Procurar novos hobbes.</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Melhorar meu desempenho como professora</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Começar a auto escola.</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Saúde, disposição e auto estima.</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Me preparar mentalmente e organizar as coisas.</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
